discussion/kv_engine/173325/173325_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Remove ActiveStream from DCPBackfill

Push the knowledge of a DCP stream down the hierarchy. This will
allow a new child of DCPBackfill to exist without an ActiveStream.

The DCP backfill hierarchy is now much simpler.

                DCPBackfillIface
                        |
                    DCPBackfill
                        |
            DCPBackfillToStream (ActiveStream here)
                        |
       .----------------.-----------------------.
       |                |                       |
DCPBackfillByIdDisk DCPBackfillByIdSeqno DCPBackfillMemoryBuffered

Change-Id: I072a234f9370dd6f7a59d379b5111a23ab90d9c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 21:12:07.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 21:22:52.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19454/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19454/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38622/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill.cc:23:20:
error: no member named "makeGuard" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38622/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17353/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, Vbid &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, char [45], Vbid>::format_arg_store<char const (&)[45], Vbid &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, char const (&)[45], Vbid &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:51:37: note: in instantiation of function template specialization "fmt::v8::format<char const (&)[45], Vbid>" requested here
        throw std::logic_error(fmt::format("{}: {} called in State::Done",
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:23:20: error: no member named "makeGuard" in namespace "folly" [clang-diagnostic-error]
            folly::makeGuard([start = std::chrono::steady_clock::now(), this] {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17353/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17353/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45988/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/dcp/backfill.cc(65): error C3861: "EP_LOG_WARN": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45988/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18302/ : FAILURE

Compile error at [2022-05-08T21:15:38.618Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18302/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6964/ : FAILURE

Compile error at [2022-05-08T21:14:26.337Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6964/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20139/ : FAILURE

Compile error at [2022-05-08T21:16:44.654Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7056/ : FAILURE

Compile error at [2022-05-08T21:14:56.913Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7056/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19111/ : FAILURE

Compile error at [2022-05-08T21:14:41.536Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19111/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27511/ : FAILURE

Compile error at [2022-05-08T21:17:56.702Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/backfill.cc:65:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27511/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16356/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
